--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -8,10 +8,12 @@ $font1 : "NotoSansKR";
 
 //color
 $colPrimary : #66C7BB;
-$colPrimaryHover : #51b1a5;
+$colPrimaryHover : #62bdb3;
 $colSub:#EFDC2C;
 $colPink : #EA7070;
+$colPinkHover : #d96565;
 $colBlue : #86AEEB;
+$colBlueHover : #7da5e1;
 
 //text
 $textCol1 : #111;
