--- a/assets/common.scss
+++ b/assets/common.scss
@@ -61,6 +61,15 @@
   }
 }
 
+.popup{
+  &-toast{
+    position:fixed;
+    left:50%;
+    top:20px;
+    transform:translateX(-50%);
+  }
+}
+
 .header{
   height:70px;
   width:100vw;
