--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -92,9 +92,15 @@
       &-modi {
         width: 20px;
         height: 20px;
-        position: relative;
-        top: -1px;
         background: url(~/static/images/icon/pen.svg)no-repeat center;
+        display: inline-block;
+        vertical-align: middle;
+        opacity: 0;
+      }
+      &-sound {
+        width: 20px;
+        height: 20px;
+        background: url(~/static/images/icon/sound_wh.svg)no-repeat center / 13px;
         display: inline-block;
         vertical-align: middle;
         opacity: 0;
@@ -155,7 +161,15 @@
         display: block;
         padding: 8px 5px 8px 20px;
         font-size: 1.2rem;
-        color: #fff;
+        .text{
+          display:inline-block;
+          vertical-align: middle;
+          max-width: 120px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          color: #fff;
+        }
 
         &:hover {
 
@@ -194,12 +208,23 @@
         padding: 8px 40px;
         font-size: 1.2rem;
         color: #fff;
+        label{
+          display:inline-block;
+          vertical-align: middle;;
+          max-width: 130px;
+          white-space: nowrap;
+          overflow: hidden;
+          text-overflow: ellipsis;
+          color: #fff;
+          margin-bottom: 0;
+        }
 
         &:hover {
           background-color: #3f3f3f;
 
           .chapter-modi,
-          .chapter-del {
+          .chapter-del,
+          .chapter-sound {
             opacity: 1;
           }
         }
@@ -233,7 +258,7 @@
     .delete-btn{
       position:absolute;
       right:10px;
-      top:10px;
+      top:15px;
     }
 
     .insert{
@@ -296,6 +321,7 @@
       background: #fff;
       border-radius: 10px;
       margin: 0 10px;
+      position:relative;
       & > div{
         padding: 15px 25px 10px 25px;
         border-bottom: 1px solid #eee;
@@ -535,23 +561,24 @@
             .btn {
               width: 116px;
               height: 34px;
-              color: #fff;
               border-radius: 5px;
               font-size: 1.4rem;
-              font-weight: 300;
               margin: 0 7px;
               outline: none;
 
               &.sound {
-                background-color: $colPrimary;
+                border-color: $colPrimaryHover;
+                color: $colPrimaryHover;
               }
 
               &.point {
-                background-color: $colPink;
+                border-color: $colPinkHover;
+                color: $colPinkHover;
               }
 
               &.scenario {
-                background-color: $colBlue;
+                border-color: $colBlueHover;
+                color: $colBlueHover;
               }
             }
 
@@ -756,6 +783,7 @@
           position: absolute;
           right: 2px;
           top: 0;
+          z-index: 10;
 
           .text {
             font-size: 1.4rem;
@@ -765,7 +793,20 @@
       }
 
       &-list {
-        margin: 0;
+        padding-top: 50px;
+        margin: -50px 0 0 0;
+
+        .swiper-button-prev{
+          left:unset;
+          right: 70px;
+          top: 22px;
+          background: url(~/static/images/icon/arrow_left.svg) no-repeat center/15px
+        }
+        .swiper-button-next{
+          right: 40px;
+          top: 22px;
+          background: url(~/static/images/icon/arrow_right.svg) no-repeat center/15px
+        }
 
         &--item {
           border-right: 1px dashed #eee;
@@ -1009,7 +1050,8 @@
   &-tit {
     font-size: 1.5rem;
     text-align: center;
-    margin-top: 10px;
+    margin-bottom: 15px;
+    font-weight: 500;
   }
 
   &-img {
