--- a/assets/common.scss
+++ b/assets/common.scss
@@ -70,6 +70,10 @@
     left:50%;
     top:20px;
     transform:translateX(-50%);
+    font-size:1.4rem;
+    .alert .close{
+      top:3px;
+    }
   }
 }
 
@@ -571,6 +575,7 @@
           z-index: 2;
           background-color:rgba(0,0,0,.7);
           padding:15px;
+          width: 100%;
           .category{
             color:#fff;
             font-weight: 300;
