--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -161,6 +161,7 @@
         display: block;
         padding: 8px 5px 8px 20px;
         font-size: 1.2rem;
+        color:#fff;
         .text{
           display:inline-block;
           vertical-align: middle;
@@ -278,6 +279,38 @@
         justify-content: center;
         font-size:2rem;
         color:#fff;
+      }
+
+
+      & >.right {
+        width: 380px;
+        height: 100%;
+        background: #fff;
+        border-radius: 10px;
+        @media (max-width: 1600px) {
+          position: fixed;
+          right: -330px;
+          bottom: 10px;
+          z-index: 1;
+          height: calc(100% - 100px);
+          border-radius: 10px 0 0 10px;
+          box-shadow: 0 0 10px rgba(0, 0, 0, .2);
+          transition:right .3s;
+          .btn-fold{
+            width:20px;
+            height: 20px;
+            background:url(~/static/images/icon/arrow_left.svg)no-repeat center / 13px;
+            position:absolute;
+            left:15px;
+            top:calc(50% - 10px);
+            &.active{
+              background:url(~/static/images/icon/arrow_right.svg)no-repeat center / 13px;
+            }
+          }
+          &.fold{
+            right:0;
+          }
+        }
       }
     }
 
@@ -486,6 +519,16 @@
           }
 
           &.type2 {
+            .swiper-button-prev{
+              background: url(~/static/images/icon/arrow_left.svg) no-repeat center/10px;
+              left:0;
+              top:11px;
+            }
+            .swiper-button-next{
+              background: url(~/static/images/icon/arrow_right.svg) no-repeat center/10px;
+              right:0;
+              top:11px;
+            }
             .tab-list--item {
               font-size: 1.4rem;
               position: relative;
@@ -537,6 +580,11 @@
             border-radius: 5px;
             border: 1px solid #ccc;
             position: relative;
+            .input-text{
+              display:block;
+              margin-bottom:10px;
+              width:100%;
+            }
 
             textarea {
               resize: none;
@@ -565,6 +613,11 @@
               font-size: 1.4rem;
               margin: 0 7px;
               outline: none;
+
+              &.timer {
+                border-color: $colPrimaryHover;
+                color: $colPrimaryHover;
+              }
 
               &.sound {
                 border-color: $colPrimaryHover;
@@ -604,6 +657,11 @@
               &.scenario-set {
                 .save {
                   background-color: $colBlue;
+                }
+              }
+              &.timer-set {
+                .save {
+                  background-color: $colPrimary;
                 }
               }
             }
@@ -716,37 +774,6 @@
         }
       }
 
-    }
-
-    .right {
-      width: 380px;
-      height: 100%;
-      background: #fff;
-      border-radius: 10px;
-      @media (max-width: 1600px) {
-        position: fixed;
-        right: -330px;
-        bottom: 10px;
-        z-index: 1;
-        height: calc(100% - 100px);
-        border-radius: 10px 0 0 10px;
-        box-shadow: 0 0 10px rgba(0, 0, 0, .2);
-        transition:right .3s;
-        .btn-fold{
-          width:20px;
-          height: 20px;
-          background:url(~/static/images/icon/arrow_left.svg)no-repeat center / 13px;
-          position:absolute;
-          left:15px;
-          top:calc(50% - 10px);
-          &.active{
-            background:url(~/static/images/icon/arrow_right.svg)no-repeat center / 13px;
-          }
-        }
-        &.fold{
-          right:0;
-        }
-      }
     }
 
     .cut {
@@ -1047,13 +1074,36 @@
 }
 
 .preview {
+  &-wrap{
+    padding:50px;
+    display:flex;
+    align-items: center;
+    justify-content: center;
+    background:#000;
+    height:100vh;
+    .web-left{
+      background:#fff;
+      min-height:730px;
+      margin-right:50px;
+      padding:20px;
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      font-size:1.4rem;
+      min-width: 360px;
+    }
+    .preview-img{
+      width:360px;
+      height:730px;
+    }
+  }
   &-tit {
     font-size: 1.5rem;
     text-align: center;
     margin-bottom: 15px;
     font-weight: 500;
   }
-
   &-img {
     width: 290px;
     height: 588px;
@@ -1090,10 +1140,19 @@
     }
 
     .character {
-      width: 260px;
       left: 16px;
       top: unset;
       bottom: 11px;
+      width:calc(100% - 30px);
+        &-1, &-2{
+          width:calc(100% - 30px);
+          height:calc(100% - 30px);
+          overflow: hidden;
+          border-radius: 30px;
+          position:absolute;
+          top: 15px;
+          left: 16px;
+        }
       &-2{
         .character:first-child{
           left:-60px;
@@ -1108,7 +1167,7 @@
     .dialogue {
       position: absolute;
       left: 10%;
-      bottom: 30px;
+      bottom: 35px;
       background-color: rgba(255, 255, 255, .8);
       width: 80%;
       border-radius: 10px;
@@ -1132,15 +1191,53 @@
       }
 
       .text {
-        margin: 0;
+        margin:-15px 0 0 0;
         white-space: pre-line;
-        width:200px;
+        width:100%;
         word-break: break-all;
       }
     }
 
     .mockup {
       pointer-events: none;
+    }
+  }
+  .answer{
+    position:absolute;
+    width:80%;
+    z-index: 2;
+    left:10%;
+    top:50%;
+    display:flex;
+    flex-direction: column;
+    transform:translateY(-50%);
+    &-multiple{
+      .btn{
+        background:rgba(255, 255, 255, .8);
+        margin:7px 0;
+        font-size:1.4rem;
+        padding:7px;
+        box-shadow: 0 8px 0 rgba(0, 0, 0, .5);
+        border-radius: 10px;
+      }
+    }
+    &-subjective{
+      .text{
+        min-height: 100px;
+        background:rgba(255, 255, 255, .8);
+        margin-bottom:15px;
+        font-size:1.4rem;
+        padding:7px 10px;
+        box-shadow: 0 8px 0 rgba(0, 0, 0, .5);
+        border-radius: 10px;
+      }
+      .input-text{
+        width:100%;
+        background:rgba(255, 255, 255, .8);
+        box-shadow: 0 8px 0 rgba(0, 0, 0, .5);
+        border-radius: 10px;
+        border:none;
+      }
     }
   }
 }
