--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -1141,6 +1141,25 @@
       width:360px;
       height:730px;
     }
+    @media (max-width: 800px) {
+      .web-left{
+        display:none;
+      }
+    }
+    @media (max-width: 500px) {
+      padding:0;
+      .preview{
+        width:100%;
+        height:100%;
+      }
+      .preview-img{
+        width:100%;
+        height:100%;
+        .mockup{
+          display:none;
+        }
+      }
+    }
   }
   &-tit {
     font-size: 1.5rem;
@@ -1235,7 +1254,7 @@
       }
 
       .text {
-        margin:-15px 0 0 0;
+        margin:0;
         white-space: pre-line;
         width:100%;
         word-break: break-all;
