--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -1118,8 +1118,10 @@
 }
 
 .preview {
+  position:relative;
+  width:369px;
+  height:750px;
   &-wrap{
-    padding:50px;
     display:flex;
     align-items: center;
     justify-content: center;
@@ -1137,27 +1139,9 @@
       font-size:1.4rem;
       min-width: 360px;
     }
-    .preview-img{
-      width:360px;
-      height:730px;
-    }
     @media (max-width: 800px) {
       .web-left{
         display:none;
-      }
-    }
-    @media (max-width: 500px) {
-      padding:0;
-      .preview{
-        width:100%;
-        height:100%;
-      }
-      .preview-img{
-        width:100%;
-        height:100%;
-        .mockup{
-          display:none;
-        }
       }
     }
   }
@@ -1167,62 +1151,61 @@
     margin-bottom: 15px;
     font-weight: 500;
   }
-  &-img {
-    width: 290px;
-    height: 588px;
-    position: relative;
-    margin: 0 auto;
-    overflow: hidden;
-    &:after{
-      content:"";
-      display:block;
-      width: calc(100% - 20px);
-      height: calc(100% - 20px);
-      border-radius: 30px;
-      position:absolute;
-      top: 10px;
-      left: 10px;
-      background:#000;
+  &-mockup {
+    pointer-events: none;
+    position:absolute;
+    z-index: 5;
+    left:0;
+    @media (max-width: 800px) {
+      display:none;
     }
-
+  }
+  &-con{
+    position: absolute;
+    left: 19px;
+    top: 15px;
+    z-index: 1;
+    width: calc(100% - 36px);
+    height: calc(100% - 30px);
+    border-radius: 40px;
+    overflow:hidden;
+    // &:after{
+    //   content:"";
+    //   display:block;
+    //   width: 100%;
+    //   height: 100%;
+    //   position:absolute;
+    //   top: 0;
+    //   left: 0;
+    //   background:#000;
+    // }
+  }
+  &-img {
     img {
-      width: 100%;
       position: absolute;
       left: 0;
       top: 0;
       z-index: 1;
     }
-
     .background {
-      width: calc(100% - 20px);
-      height: calc(100% - 20px);
-      border-radius: 30px;
-      overflow: hidden;
-      top: 10px;
-      left: 10px;
+      width: 100%;
+      height: 100%;
     }
-
     .character {
-      left: 16px;
+      width:100%;
       top: unset;
-      bottom: 11px;
-      width:calc(100% - 30px);
+      bottom:0;
         &-1, &-2{
-          width:calc(100% - 30px);
-          height:calc(100% - 30px);
-          overflow: hidden;
-          border-radius: 30px;
-          position:absolute;
-          top: 15px;
-          left: 16px;
+          width:100%;
+          height:100%;
         }
       &-2{
         .character:first-child{
-          left:-60px;
+          left:-30%;
         }
         .character:last-child{
           left:unset;
-          right:-60px;
+          right:-30%;
         }
       }
     }
@@ -1260,20 +1243,128 @@
         word-break: break-all;
       }
     }
-
-    .mockup {
-      pointer-events: none;
+  }
+  &-intro{
+    &--background{
+      position:absolute;
+      width:100%;
+      height:100%;
+      &:after{
+        content:"";
+        display:block;
+        width:100%;
+        height: 100%;
+        background:url(~/static/images/bg_dim.png)no-repeat center / 100% 100%;
+        position:absolute;
+        left:0;
+        top:0;
+      }
+      img{
+        width:auto;
+        height: 100%;
+        position:absolute;
+        left:50%;
+        top:50%;
+        transform: translate(-50%, -50%);
+      }
+    }
+    &--logo{
+      position:absolute;
+      left:50%;
+      top:100px;
+      transform:translateX(-50%);
+      width:70%;
+      img{
+        width:100%;
+      }
+    }
+    &--menu{
+      position:absolute;
+      left:50%;
+      transform: translateX(-50%);
+      top:250px;
+      display:flex;
+      flex-direction: column;
+      width:70%;
+      .btn{
+        font-size:1.6rem;
+        background:#ccc;
+        margin-bottom:20px;
+        width:100%;
+        padding:15px 0;
+      }
+    }
+    &--copy{
+      position:absolute;
+      left:50%;
+      transform:translateX(-50%);
+      bottom:30px;
+      font-size:1.5rem;
+    }
+  }
+  &-profile{
+    &--top{
+      position:absolute;
+      left:0;
+      top:40px;
+      background:#ccc;
+      width:100%;
+      padding:10px;
+      text-align: center;
+      display:flex;
+      align-items: center;
+      justify-content: center;
+    }
+    &--list{
+      position:absolute;
+      width:90%;
+      height:calc(100% - 150px);
+      background:#fff;
+      left:5%;
+      top:100px;
+      overflow:auto;
+    }
+    &.detail{
+      .name{
+        color:#f00;
+        font-size:2rem;
+        margin:50px auto;
+        text-align: center;
+      }
+      .character{
+        position:absolute;
+        left:50%;
+        top:50%;
+        transform:translate(-50%, -50%);
+      }
+      .profile{
+        background:rgba(255, 255, 255, .8);
+        width:90%;
+        position:absolute;
+        left:5%;
+        bottom:5%;
+        font-size:1.4rem;
+        height:200px;
+        padding:20px;
+        overflow:auto;
+        white-space: pre-line;
+        word-break: break-all;
+      }
     }
   }
   .answer{
     position:absolute;
     width:80%;
-    z-index: 2;
+    z-index: 4;
     left:10%;
     top:50%;
     display:flex;
     flex-direction: column;
     transform:translateY(-50%);
+    &-dim{
+      z-index: 3;
+      opacity: .5;
+    }
     &-multiple{
       .btn{
         background:rgba(255, 255, 255, .8);
@@ -1301,6 +1392,15 @@
         border-radius: 10px;
         border:none;
       }
+    }
+  }
+  @media (max-width: 800px) {
+    width:100%;
+    height:100%;
+    .answer-dim{
+      border-radius: 0;
+      width:100%;
+      height: 100%;
     }
   }
 }
