--- a/assets/common.scss
+++ b/assets/common.scss
@@ -2,18 +2,18 @@
 @import "variables.scss";
 
 ::-webkit-scrollbar {
-  width: 10px;
-  height:10px;
+  width: 0;
+  height:0;
 }
-::-webkit-scrollbar-thumb {
-  background-color: #bbb;
-  border-radius: 5px;
-  background-clip: padding-box;
-  border: 2px solid transparent;
-}
-::-webkit-scrollbar-track {
-  background-color: #eee;
-}
+// ::-webkit-scrollbar-thumb {
+//   background-color: #bbb;
+//   border-radius: 5px;
+//   background-clip: padding-box;
+//   border: 2px solid transparent;
+// }
+// ::-webkit-scrollbar-track {
+//   background-color: #eee;
+// }
 
 .wrap{
   max-width: $pc;
@@ -27,6 +27,12 @@
   border-radius: 5px;
   margin:0 5px;
   transition:background-color .3s;
+  &.md{
+    font-size:1.5rem;
+    padding:6px 10px;
+    min-width: 130px;
+    font-weight: 300;
+  }
   &.lg{
     font-size:1.6rem;
     padding:10px 20px;
@@ -62,6 +68,13 @@
       background-color:$textCol2Hover;
     }
   }
+  &-l-grey{
+    background:#afafaf;
+    color:#fff;
+    &:hover{
+      background-color:#999;
+    }
+  }
 }
 
 .popup{
@@ -73,6 +86,26 @@
     font-size:1.4rem;
     .alert .close{
       top:3px;
+    }
+  }
+}
+
+.vb{
+  .vb-dragger {
+    width: 10px;
+    right: 0;
+    .vb-dragger-styler {
+      background-color: rgba(85,85,85,.5);
+      margin: 5px 5px 5px 0;
+      border-radius: 20px;
+      height: calc(100% - 10px);
+      display: block;
+      transition:all .3s;
+    }
+  }
+  &.vb-scrolling-phantom, &.vb-dragging-phantom{
+    .vb-dragger .vb-dragger-styler{
+      background-color: #555
     }
   }
 }
