--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -201,39 +201,39 @@
 
         &--item {
           position: relative;
-          &.active{
-            &:after{
-              content:"";
-              display:block;
-              width:0;
-              height:0;
-              border-bottom: 10px solid transparent;
-              border-top: 10px solid transparent;
-              border-left: 10px solid transparent;
-              border-right: 10px solid #1d1d1d;
-              position:absolute;
-              right:0;
-              top:8px;
-            }
-          }
         }
       }
 
       &-tit {
-        display: block;
+        display: flex;
         padding: 8px 40px;
         font-size: 1.2rem;
         color: #fff;
+        position:relative;
         label{
-          display:inline-block;
-          vertical-align: middle;
-          max-width: 130px;
-          white-space: nowrap;
-          overflow: hidden;
-          text-overflow: ellipsis;
-          color: #fff;
           margin-bottom: 0;
-          cursor: pointer;
+          span{
+            display:inline-block;
+            vertical-align: middle;
+            max-width: 110px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            color: #fff;
+            cursor: pointer;
+          }
+          input[type=radio]:checked ~ .arrow{
+            display:block;
+            width:0;
+            height:0;
+            border-bottom: 10px solid transparent;
+            border-top: 10px solid transparent;
+            border-left: 10px solid transparent;
+            border-right: 10px solid #1d1d1d;
+            position:absolute;
+            right:0;
+            top:8px;
+          }
         }
 
         &:hover {
@@ -388,11 +388,11 @@
               &:hover{
                 border-color:$colPrimary;
               }
-              &.active{
-                background-color:$colPrimary;
-              }
               &.done{
                 background-color:$colBlue;
+              }
+              &.active{
+                background-color:$colPrimary;
               }
               &.icon{
                 &1{
@@ -608,7 +608,7 @@
 
           &--btn {
             font-size: 1.6rem;
-            margin-right: 35px;
+            margin-right: 30px;
 
             &.active {
               color: $colPrimaryHover;
@@ -766,6 +766,62 @@
             }
           }
 
+          &-answer{
+            margin-top:25px;
+            position:relative;
+            width:calc(100% + 30px);
+            input[type=text]{
+              height:45px;
+              width:calc(100% - 45px);
+              border-radius: 5px 0 0 5px;
+              border-right:none;
+            }
+            .link{
+              border:1px solid #ccc;
+              border-radius: 0 5px 5px 0;
+              position:absolute;
+              right:0;
+              top:0;
+              width:45px;
+              height:45px;
+              background-image:url(~/static/images/icon/link.svg);
+              background-repeat: no-repeat;
+              background-position: center;
+              &.active{
+                background-color:$colSub;
+                border-color:$colSub;
+              }
+            }
+            .tab-list{
+              margin:10px 0 5px;
+              border-bottom:1px solid #eee;
+              &--btn{
+                font-size:1.4rem;
+              }
+            }
+            .set {
+              width:calc(100% + 50px);
+              position:relative;
+              left:-25px;
+              padding:5px 25px 10px;
+              border-bottom:1px solid #eee;
+              height:50px;
+              .input-number{
+                margin:0 5px;
+                position:relative;
+                top:1px;
+              }
+              .text{
+                font-size:1.2rem;
+                margin-right:5px;
+              }
+              &.scenario-set{
+                position:relative;
+                top:1px;
+              }
+            }
+          }
+
           &-set {
             position: absolute;
             right: 0;
@@ -839,8 +895,8 @@
 
         .label{
           height:0;
-          margin:-10px 10px 0;
-          font-size:1.6rem;
+          margin:0;
+          font-size:1.4rem;
           position: relative;
           top:15px;
         }
@@ -1085,6 +1141,7 @@
             }
           }
           .info{
+            width:calc(100% - 40px);
             .top{
               display:flex;
               justify-content: space-between;
@@ -1126,22 +1183,22 @@
               opacity: .5;
               &.normal{
                 -webkit-line-clamp: 3;
-                height: 55px;
+                max-height: 55px;
               }
               &.question{
                 -webkit-line-clamp: 1;
-                height: 18px;
+                max-height: 18px;
                 &:before{
                   content:"Q.";
                 }
                 &.line2{
                   -webkit-line-clamp: 2;
-                  height: 36px;
+                  max-height: 36px;
                 }
               }
               &.answer{
                 -webkit-line-clamp: 1;
-                height: 18px;
+                max-height: 18px;
                 &:before{
                   content:"A.";
                 }
