--- a/assets/reset.scss
+++ b/assets/reset.scss
@@ -54,9 +54,9 @@ html, body {
 html{
 	font-size: 10px !important;
 	color:$textCol1;
-  @media (max-width: $mobile) {
-    font-size: 9px !important;
-  }
+  // @media (max-width: $mobile) {
+  //   font-size: 9px !important;
+  // }
 }
 
 /* HTML5 display-role reset for older browsers */
