--- a/assets/reset.scss
+++ b/assets/reset.scss
@@ -1,42 +1,185 @@
 @charset "utf-8";
 @import "variables.scss";
 
-@each $fonts in 1, 3, 4, 5, 7, 9 {
+@each $fonts in 1,
+3,
+4,
+5,
+7,
+9 {
 
 	@font-face {
 		font-family: $font1;
 		src: url('../static/fonts/#{$font1}#{$fonts}.woff') format('woff');
-		@if $fonts == 1 {
+
+		@if $fonts ==1 {
 			font-weight: 100;
-		} @else if $fonts == 3 {
+		}
+
+		@else if $fonts ==3 {
 			font-weight: 300;
-		} @else if $fonts == 4 {
+		}
+
+		@else if $fonts ==4 {
 			font-weight: 400;
-		} @else if $fonts == 5 {
+		}
+
+		@else if $fonts ==5 {
 			font-weight: 500;
-		} @else if $fonts == 7 {
+		}
+
+		@else if $fonts ==7 {
 			font-weight: 700;
-		} @else if $fonts == 9 {
+		}
+
+		@else if $fonts ==9 {
 			font-weight: 900;
 		}
+
 		font-style: normal;
 	}
 }
 
+// 푸라닭
+@font-face {
+	font-family: 'PuradakGentleGothicR';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.1/PuradakGentleGothicR.woff2') format('woff2');
+	font-weight: normal;
+	font-style: normal;
+}
+
+// 성거진
+@font-face {
+	font-family: 'SaenggeoJincheon';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/SaenggeoJincheon.woff2') format('woff2');
+	font-weight: normal;
+	font-style: normal;
+}
+
+// 한국기계연구원
+@font-face {
+	font-family: 'KIMM_Bold';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/KIMM_Bold.woff2') format('woff2');
+	font-weight: 700;
+	font-style: normal;
+}
+
+// 해피니스 산스
+@font-face {
+	font-family: 'Happiness-Sans-Title';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2205@1.0/Happiness-Sans-Title.woff2') format('woff2');
+	font-weight: normal;
+	font-style: normal;
+}
+
+// 마포꽃섬
+@font-face {
+	font-family: 'MapoFlowerIsland';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoFlowerIslandA.woff') format('woff');
+	font-weight: normal;
+	font-style: normal;
+}
+
+// Y콤퓨타체
+@font-face {
+	font-family: 'Ycomputer-Regular';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/Ycomputer-Regular.woff2') format('woff2');
+	font-weight: normal;
+	font-style: normal;
+}
+
+// 나눔스퀘어네오
+@font-face {
+	font-family: 'NanumSquareNeo-Variable';
+	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+	font-weight: normal;
+	font-style: normal;
+}
+
 //default
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed,
-figure, figcaption, footer, header, hgroup,
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video , textarea , input, select {
+html,
+body,
+div,
+span,
+applet,
+object,
+iframe,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+abbr,
+acronym,
+address,
+big,
+cite,
+code,
+del,
+dfn,
+em,
+img,
+ins,
+kbd,
+q,
+s,
+samp,
+strike,
+strong,
+sub,
+sup,
+tt,
+var,
+b,
+u,
+i,
+center,
+dl,
+dt,
+dd,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+legend,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+article,
+aside,
+canvas,
+details,
+embed,
+figure,
+figcaption,
+footer,
+header,
+hgroup,
+menu,
+nav,
+output,
+ruby,
+section,
+summary,
+time,
+mark,
+audio,
+video,
+textarea,
+input,
+select {
 	margin: 0;
 	padding: 0;
 	border: 0;
@@ -45,70 +188,99 @@ time, mark, audio, video , textarea , input, select {
 	color: $textCol1;
 	vertical-align: baseline;
 }
-html, body {
+
+html,
+body {
 	-webkit-text-size-adjust: none;
 	-moz-text-size-adjust: none;
 	-ms-text-size-adjust: none;
 }
 
-html{
+html {
 	font-size: 10px !important;
-	color:$textCol1;
-  // @media (max-width: $mobile) {
-  //   font-size: 9px !important;
-  // }
+	color: $textCol1;
+	// @media (max-width: $mobile) {
+	//   font-size: 9px !important;
+	// }
 }
 
 /* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure,
-footer, header, hgroup, menu, nav, section {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+menu,
+nav,
+section {
 	display: block;
 }
+
 body {
 	line-height: 1;
 }
-ol, ul {
+
+ol,
+ul {
 	list-style: none;
 }
-blockquote, q {
+
+blockquote,
+q {
 	quotes: none;
 }
-blockquote:before, blockquote:after,
-q:before, q:after {
+
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
 	content: '';
 	content: none;
 }
-textarea{
+
+textarea {
 	outline: none;
 }
+
 table {
 	border-collapse: collapse;
 	border-spacing: 0;
-	width:100%;
+	width: 100%;
 }
+
 a {
 	text-decoration: none !important;
 	color: inherit;
-	display:inline-block;
+	display: inline-block;
 }
+
 i {
-	display:inline-block;
+	display: inline-block;
 	vertical-align: middle;
 }
+
 strong {
 	font-weight: 700;
 }
-th, td{
+
+th,
+td {
 	vertical-align: middle;
 }
-input[type=password]{
+
+input[type=password] {
 	font-family: initial;
 }
+
 * {
 	-webkit-box-sizing: border-box;
 	-moz-box-sizing: border-box;
 	box-sizing: border-box;
 }
+
 // span, div{
 // 	font-family: inherit;
 // 	font-weight: inherit;
@@ -118,7 +290,8 @@ input[type=password]{
 select::-ms-expand {
 	display: none;
 }
-b{
-	color:inherit;
+
+b {
+	color: inherit;
 	font-family: inherit;
 }
