--- a/assets/reset.scss
+++ b/assets/reset.scss
@@ -43,7 +43,7 @@
 // 푸라닭
 @font-face {
 	font-family: 'PuradakGentleGothicR';
-	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.1/PuradakGentleGothicR.woff2') format('woff2');
+	src: url('../static/fonts/PuradakGentleGothicR.woff2') format('woff2');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -51,7 +51,7 @@
 // 성거진
 @font-face {
 	font-family: 'SaenggeoJincheon';
-	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/SaenggeoJincheon.woff2') format('woff2');
+	src: url('../static/fonts/SaenggeoJincheon.woff2') format('woff2');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -59,7 +59,7 @@
 // 한국기계연구원
 @font-face {
 	font-family: 'KIMM_Bold';
-	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2212@1.0/KIMM_Bold.woff2') format('woff2');
+	src: url('../static/fonts/KIMM_Bold.woff2') format('woff2');
 	font-weight: 700;
 	font-style: normal;
 }
@@ -67,7 +67,7 @@
 // 해피니스 산스
 @font-face {
 	font-family: 'Happiness-Sans-Title';
-	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2205@1.0/Happiness-Sans-Title.woff2') format('woff2');
+	src: url('../static/fonts/Happiness-Sans-Title.woff2') format('woff2');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -75,7 +75,7 @@
 // 마포꽃섬
 @font-face {
 	font-family: 'MapoFlowerIsland';
-	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_2001@1.1/MapoFlowerIslandA.woff') format('woff');
+	src: url('../static/fonts/MapoFlowerIslandA.woff') format('woff');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -83,7 +83,7 @@
 // Y콤퓨타체
 @font-face {
 	font-family: 'Ycomputer-Regular';
-	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/Ycomputer-Regular.woff2') format('woff2');
+	src: url('../static/fonts/Ycomputer-Regular.woff2') format('woff2');
 	font-weight: normal;
 	font-style: normal;
 }
@@ -91,7 +91,7 @@
 // 나눔스퀘어네오
 @font-face {
 	font-family: 'NanumSquareNeo-Variable';
-	src: url('https://cdn.jsdelivr.net/gh/projectnoonnu/noonfonts_11-01@1.0/NanumSquareNeo-Variable.woff2') format('woff2');
+	src: url('../static/fonts/NanumSquareNeo-Variable.woff2') format('woff2');
 	font-weight: normal;
 	font-style: normal;
 }
