--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -370,7 +370,8 @@
 
     .preview {
       width:360px;
-      height:730px;
+      max-height:730px;
+      height:100%;
       &-tit{
         margin:10px 0 15px -80px;
         .highlight{
@@ -395,6 +396,8 @@
         // }
         .column-2{
           display:flex;
+          height:90%;
+          max-height: 730px;
           .buttons{
             display:flex;
             flex-direction: column;
@@ -442,6 +445,7 @@
       }
       &-mockup{
         width:100%;
+        height:100%;
         @media (max-width: 800px) {
           display:block;
         }
@@ -665,12 +669,12 @@
             .swiper-button-prev{
               background: url(~/static/images/icon/arrow_left.svg) no-repeat center/10px;
               left:0;
-              top:11px;
+              top:8px;
             }
             .swiper-button-next{
               background: url(~/static/images/icon/arrow_right.svg) no-repeat center/10px;
               right:0;
-              top:11px;
+              top:8px;
             }
             .tab-list--item {
               font-size: 1.4rem;
@@ -810,6 +814,7 @@
               font-size: 1.4rem;
               width: 100%;
               padding:2px;
+              line-height: 1.5;
 
               &::placeholder {
                 color: #ccc;
@@ -1353,6 +1358,13 @@
     //   left: 0;
     //   background:#000;
     // }
+    @media (max-width: 800px) {
+      width:100%;
+      height:100%;
+      position:unset;
+      left:unset;
+      top:unset;
+    }
   }
   &-img {
     img {
@@ -1411,10 +1423,11 @@
       }
 
       .text {
-        margin:0;
+        margin:-15px 0 0 0;
         white-space: pre-line;
         width:100%;
         word-break: break-all;
+        line-height: 1.5;
       }
     }
   }
@@ -1430,6 +1443,9 @@
         left:50%;
         top:50%;
         transform: translate(-50%, -50%);
+        @media (max-width: 800px) {
+          width:100%;
+        }
       }
     }
     &--logo{
