--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -646,7 +646,7 @@
         }
       }
 
-      &-talk {
+      &-talk, &-profile {
         .tab-list {
           width: calc(100% + 40px);
           position: relative;
