--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -440,6 +440,7 @@
                 }
                 &5{
                   background-image:url(~/static/images/icon/preview_icon5.svg);
+                  background-size:24px;
                 }
               }
             }
