--- a/assets/common.scss
+++ b/assets/common.scss
@@ -6,6 +6,10 @@
   height: 0;
 }
 
+::selection {
+  background-color:#fff;
+ }
+
 // ::-webkit-scrollbar-thumb {
 //   background-color: #bbb;
 //   border-radius: 5px;
@@ -16,10 +20,13 @@
 //   background-color: #eee;
 // }
 
+#__layout{
+  transition:background-color .3s;
+}
+
 .wrap {
   max-width: $pc;
   margin: 0 auto;
-  margin-top: 70px;
 }
 
 .text-center{
@@ -64,7 +71,7 @@ button{
 .btn {
   &-primary {
     background-color: $colPrimary !important;
-    color: #fff;
+    color: #fff !important;
 
     &:hover {
       background-color: $colPrimaryHover !important;
@@ -152,21 +159,44 @@ button{
 }
 
 .header {
-  height: 70px;
+  height: 80px;
   width: 100vw;
-  position: fixed;
+  position: sticky;
   z-index: 100;
   left: 0;
   top: 0;
-  border-top: 5px solid $colPrimary;
-  background-color: #fff;
-
   &-wrap {
     display: flex;
     justify-content: space-between;
     align-items: center;
     max-width: $pc;
     margin: 0 auto;
+    height: 100%;
+    .left{
+      display:flex;
+      align-items: center;
+    }
+    .right{
+      display:flex;
+      align-items: center;
+      .btn{
+        font-family: 'NanumSquareNeo', sans-serif;
+        margin-left:40px;
+        transition:all .3s;
+        &-login{
+          color:$colPrimary;
+          font-weight: 500;
+        }
+        &-primary{
+          width:94px;
+          height:32px;
+          border-radius: 30px;
+          display:flex;
+          align-items: center;
+          justify-content: center;
+        }
+      }
+    }
 
     .menu-btn,
     .close-btn {
@@ -253,10 +283,23 @@ button{
 
   &-logo {
     a {
-      width: 141px;
-      height: 37px;
-      margin: 15px 0 10px;
-      background: url(../static/images/logo.svg)no-repeat center / auto;
+      background: url(../static/images/symbol.png)no-repeat left center / auto;
+      color:#888;
+      padding-left:40px;
+      font-family: 'NanumSquareNeo', sans-serif;
+      font-size:2rem;
+      transition:all .3s;
+      height:34px;
+      display:flex;
+      align-items: center;
+      font-weight: 300;
+      &:hover{
+        color:$colPrimary;
+      }
+      .maker{
+        font-size:1.2rem;
+        margin:5px 0 0 2px;
+      }
     }
   }
 
@@ -268,13 +311,27 @@ button{
       margin-left: 100px;
 
       a {
+        font-family: 'NanumSquareNeo', sans-serif;
         font-size: 1.6rem;
-        color: $textCol1;
-        transition: color .3s;
+        color: $textCol1 !important;
         white-space: nowrap;
-
-        &:hover {
-          color: $colPrimary;
+        position:relative;
+        &:before{
+          content:"";
+          display:block;
+          width:100%;
+          height:2px;
+          position:absolute;
+          left:0;
+          bottom:-5px;
+          background:$colPrimary;
+          transition: 0.5s transform ease;
+          transform: scale3d(0,1,1);
+          transform-origin: 100% 50%;
+        }
+        &:hover:before{
+          transform: scale3d(1,1,1);
+          transform-origin: 0 50%;
         }
       }
     }
@@ -350,155 +407,129 @@ button{
 }
 
 .main {
-  &-section {
-    min-height: calc(100vh - 70px);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+  &-wrap{
+    height: calc(100vh - 232px);
+    position:relative;
+    overflow: hidden;
+    .dot-circle{
+      position:absolute;
+      left:0;
+      bottom:-5vh;
+      width:60vh;
+      height:60vh;
+      border:10px dotted #fff;
+      border-radius: 30vh;
+    }
+    .right-menu{
+      position:absolute;
+      right:0;
+      top:50%;
+      transform:translateY(-50%);
+      display:flex;
+      flex-direction: column;
+      align-items: flex-end;
+      .btn{
+        font-family: 'NanumSquareNeo', sans-serif;
+        width:40px;
+        height:40px;
+        white-space: nowrap;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+        background:#888;
+        border-radius: 20px;
+        margin:5px 0;
+        color:#fff;
+        font-weight: 700;
+        .full{
+          max-width:0;
+          overflow:hidden;
+          font-family: 'NanumSquareNeo', sans-serif;
+          color:#fff;
+        }
+        &.active{
+          width:auto;
+          padding:0 20px;
+          background:$colPrimary;
+          transition:width .5s;
+          font-weight: 300;
+          .full{
+            max-width:100px;
+            transition:all .5s;
+          }
+        }
+      }
+    }
   }
-
-  &-top {
-    text-align: center;
-    position: relative;
-
-    &--tit {
-      font-size: 3rem;
-
-      .sub {
-        color: $colPrimary;
-        font-size: 2rem;
-        font-weight: 300;
-        margin-top: 8px;
+  &-top{
+    &--con{
+      text-align: center;
+      position:absolute;
+      left:65%;
+      transform:translateX(-50%);
+      top:50px;
+      transition:all .3s;
+      .tit{
+        font-family: 'NanumSquareNeo', sans-serif;
+        font-size:5rem;
+        font-weight: 900;
+        color:$colPrimary;
+      }
+      .text{
+        font-family: 'NanumSquareNeo', sans-serif;
+        font-size:3rem;
+        margin-top:-10px;
       }
     }
-
-    &--sub {
-      color: $textCol2;
-      font-size: 2rem;
-      font-weight: 300;
-      margin-top: 36px;
-    }
-
-    &--button {
-      width: 250px;
-      height: 70px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      border-radius: 5px;
-      font-size: 3rem;
-      color: #fff !important;
-      background-color: $colPrimary;
-      font-weight: 300;
-      margin: 70px auto 100px;
-      transition: background-color .3s;
-
-      &:hover {
-        background-color: $colPrimaryHover;
+    &.center{
+      .main-top--con{
+        left:50%;
       }
     }
-
-    &--shape {
-      div {
-        position: absolute;
-        z-index: -1;
-
-        &.line {
-          width: 1px;
-          height: 150px;
-          background: #888;
-          left: 50%;
-          bottom: 50px;
-
-          &:after {
-            content: "";
-            display: block;
-            width: 7px;
-            height: 7px;
-            background-color: $colPrimary;
-            transform: rotate(45deg);
-            position: absolute;
-            left: -3px;
-            bottom: -15px;
-          }
-        }
-
-        &.circle {
-          &-1 {
-            width: 270px;
-            height: 270px;
-            background-color: rgba(190, 189, 253, .2);
-            border-radius: 50%;
-            left: 130px;
-            top: 80px;
-          }
-
-          &-2 {
-            width: 200px;
-            height: 200px;
-            background-color: rgba(253, 246, 189, .2);
-            border-radius: 50%;
-            left: 350px;
-            top: 160px;
-          }
-
-          &-3 {
-            width: 300px;
-            height: 300px;
-            background-color: rgba(253, 189, 246, .2);
-            border-radius: 50%;
-            left: 200px;
-            top: 280px;
-          }
-        }
-      }
+  }
+  &-image{
+    border-radius: 40px;
+    overflow:hidden;
+    position:relative;
+    pointer-events: none;
+    height:100%;
+    width:100%;
+    transition:all .3s;
+    box-shadow: 0 0 30px rgba(0, 0, 0, .1);
+    &.swiper-slide{
+      transform:scale(0.5) translateX(90px);
+      opacity: .5;
     }
-
-    @media (max-width: $mobile) {
-      padding: 0 10vw;
-
-      &--sub {
-        word-break: keep-all;
-      }
-
-      &--button {
-        max-width: 250px;
-        max-height: 70px;
-        width: 60vw;
-        height: 20vw;
-        font-size: 2.5rem;
-        margin: 10vw auto 20vw;
-      }
-
-      &--shape {
-        div {
-          &.line {
-            height: 20vw;
-          }
-
-          &.circle {
-            &-1 {
-              width: 40vw;
-              height: 40vw;
-              left: 10vw;
-              top: 10vw;
-            }
-
-            &-2 {
-              width: 30vw;
-              height: 30vw;
-              left: 45vw;
-              top: 25vw;
-            }
-
-            &-3 {
-              width: 50vw;
-              height: 50vw;
-              left: 16vw;
-              top: 40vw;
-            }
-          }
-        }
+    &.swiper-slide-active{
+      transform:scale(1.2) translateX(120px);
+      opacity: 1;
+    }
+    &.swiper-slide-next{
+      transform:scale(0.6) translateX(240px);
+    }
+    &.swiper-slide-duplicate-prev{
+      transform:scale(0.4) translateX(-200px);
+    }
+    img{
+      height:100%;
+      position:absolute;
+      left:50%;
+      top:50%;
+      transform: translate(-50%,-50%);
+    }
+    &--list{
+      padding:100px 0 !important;
+      width:80%;
+      height:700px;
+      position:absolute;
+      left:50%;
+      transform:translateX(-50%);
+      bottom:-100px;
+      display:flex;
+      transition:all .3s;
+      margin:0 !important;
+      &.inactive{
+        bottom:-300px;
       }
     }
   }
@@ -996,11 +1027,55 @@ button{
   &-wrap {
     max-width: $pc;
     margin: 0 auto;
-    color: #fff;
-    text-align: center;
     padding: 20px 0;
     font-weight: 300;
     font-size: 1.6rem;
+    display:flex;
+    justify-content: space-between;
+    .left{
+      .name, .info span{
+        font-size:1.6rem;
+        font-family: 'NanumSquareNeo', sans-serif;
+        color:#999;
+      }
+      .name{
+        margin-bottom:10px;
+      }
+      .info span{
+        font-size:1.2rem;
+      }
+      .copy{
+        color:#fff;
+        font-family: 'NanumSquareNeo', sans-serif;
+        font-size:1.2rem;
+        margin-top:20px;
+      }
+    }
+    .right{
+      .btn{
+        width:20px;
+        height:20px;
+        background-repeat: no-repeat;
+        background-position:right center;
+        background-size:20px;
+        margin-left:20px;
+        opacity: .5;
+        &:hover{
+          opacity: 1;
+        }
+        &.sns{
+          &-1{
+            background-image: url(../static/images/icon/sns2.svg);
+          }
+          &-2{
+            background-image: url(../static/images/icon/sns3.svg);
+          }
+          &-3{
+            background-image: url(../static/images/icon/sns1.svg);
+          }
+        }
+      }
+    }
   }
 }
 
@@ -1042,7 +1117,7 @@ button{
   }
 
   &-nanumNeo {
-    font-family: 'NanumSquareNeo-Variable', sans-serif;
+    font-family: 'NanumSquareNeo', sans-serif;
   }
 }
 
@@ -1052,6 +1127,15 @@ button{
 
 .el-dialog{
   width:55% !important;
+  margin:0 auto !important;
+  &__wrapper{
+    display:flex;
+    align-items: center;
+    justify-content: center;
+  }
+  &__body{
+    padding:0 20px 30px !important;
+  }
 }
 
 .el-input__inner{
@@ -1062,4 +1146,10 @@ button{
 .el-select-dropdown__item.selected span{
   color:$colPrimaryHover !important;
   font-weight: 400;
+}
+
+.el-icon-close{
+  font-size:2rem;
+  font-weight: bold !important;
+  color:#000 !important;
 }
