--- a/assets/maker.scss
+++ b/assets/maker.scss
@@ -331,6 +331,7 @@
         height: 100%;
         background: #fff;
         border-radius: 10px;
+        transition:right .3s;
         @media (max-width: 1600px) {
           position: fixed;
           right: -330px;
@@ -490,6 +491,12 @@
       position:relative;
       min-width: 500px;
       margin:0 10px;
+      .right-top{
+        position:absolute;
+        right:20px;
+        top:20px;
+        z-index: 1;
+      }
       @media (max-width: 1600px) {
         margin: 0 50px 0 10px;
       }
@@ -1118,6 +1125,22 @@
             overflow:hidden;
             margin:0 15px 15px 0;
             cursor: pointer;
+            &.upload{
+              border-color:$colPrimary;
+              .label{
+                display:block;
+                width:100%;
+                height:100%;
+                background:url(~/static/images/icon/cloud.svg)no-repeat center / 20px;
+                cursor: pointer;
+                input{
+                  appearance: none;
+                  width: 0;
+                  height: 0;
+                  position:absolute;
+                }
+              }
+            }
             img{
               width:100%;
             }
@@ -1175,6 +1198,48 @@
               }
               &:hover .btn{
                 opacity: 1;
+              }
+            }
+            .btn-wrap{
+              position:absolute;
+              left:0;
+              bottom:0;
+              width:100%;
+              height:32px;
+              background:rgba(0, 0, 0, .8);
+              display:flex;
+              align-items: center;
+              justify-content: center;
+              opacity: 0;
+              transition:opacity .3s;
+              .btn{
+                color:#fff;
+                font-size:1.3rem;
+                font-weight: 300;
+                &:nth-child(2){
+                  margin-left:10px;
+                  position:relative;
+                  &:after{
+                    content:"";
+                    display:block;
+                    width:1px;
+                    height:13px;
+                    background:#888;
+                    position:absolute;
+                    left:-5px;
+                    top:1px;
+                  }
+                }
+              }
+            }
+          }
+          &.asset{
+            .thumbnail-list--item{
+              cursor: default;
+              &:hover{
+                .btn-wrap{
+                  opacity: 1;
+                }
               }
             }
           }
@@ -1247,7 +1312,7 @@
                 font-weight: 300;
                 &.type{
                   &1{
-                    color:#108C7D;
+                    color:$colPrimary;
                   }
                   &2{
                     color:$colPink;
@@ -1962,13 +2027,14 @@
   &-wrap{
     display:flex;
     padding:0 10px;
+    align-items: center;
   }
   &-spot{
     flex:3;
     padding-right:20px;
     .input-file{
       width:100%;
-      height:100%;
+      height:570px;
       display:flex;
       align-items: center;
       justify-content: center;
@@ -2008,8 +2074,11 @@
       margin-bottom:5px;
     }
     .scroll{
-      height:100px;
-      margin-bottom:25px;
+      height: 150px;
+      padding: 10px 15px;
+      border: 1px solid #ccc;
+      border-radius: 5px;
+      margin: 10px 0;
       p{
         font-size:1.2rem;
         color:$textCol2;
